[BL-42] Implemented a API : /images/{imageId} GET
