# routes/images.js
@@ -1,25 +1,50 @@
 var express = require('express');
 var router = express.Router();
 var db = require('../utils/db')
-var Response = require('../utils/response');
-var RESP = require('../utils/response_values');
-var response = new Response();
+var BlResponse = require('../utils/BlResponse');
 var libImage = require('../lib/image');
 
 router.post('/', function (req, res) {
+  var response = new BlResponse();
   db.connectDB()
     .then( () => libImage.addImage(req.body))
-    .then( (result) => {
-      response.responseStatus = RESP.SUCCESS
-      response.responseMessage = "Successfully Saved"
-      response.data = result
-      res.json(response)
+    .then( (data) => {
+      response.code = 200;
+      response.data = data;
+      res.json(response.create())
     }).catch( function (error) {
     console.error(error)
-    response.responseStatus = RESP.FAIL;
-    response.responseMessage = error;
-    res.json(response)
+    response.code = 500;
+    response.message = error;
+    res.json(response.create())
   })
 })
+
+router.get('/:imageId', function(req, res){
+
+  var imageId = req.params.imageId;
+  console.log('imageId =>' + imageId);
+  var response = new BlResponse();
+
+  if (imageId == null || imageId == undefined) {
+    response.code = 400;
+    response.message = "imageId is undefined";
+    res.json(response.create())
+    return
+  }
+
+  db.connectDB()
+    .then( () => libImage.getImage(req.params.imageId))
+    .then( (data) => {
+      response.code = 200;
+      response.data = data;
+      res.json(response.create())
+    }).catch( function (error) {
+      console.error(error)
+      response.code = 500;
+      response.message = error;
+      res.json(response.create())
+  })
+});
 
 module.exports = router;
